; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/time/extr_snapmgr.c_GetFullRecentGlobalXmin.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/time/extr_snapmgr.c_GetFullRecentGlobalXmin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RecentGlobalXmin = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @GetFullRecentGlobalXmin() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = load i64, i64* @RecentGlobalXmin, align 8
  %6 = call i32 @TransactionIdIsNormal(i64 %5)
  %7 = call i32 @Assert(i32 %6)
  %8 = call i32 (...) @ReadNextFullTransactionId()
  store i32 %8, i32* %1, align 4
  %9 = load i32, i32* %1, align 4
  %10 = call i64 @EpochFromFullTransactionId(i32 %9)
  store i64 %10, i64* %2, align 8
  %11 = load i32, i32* %1, align 4
  %12 = call i64 @XidFromFullTransactionId(i32 %11)
  store i64 %12, i64* %3, align 8
  %13 = load i64, i64* @RecentGlobalXmin, align 8
  %14 = load i64, i64* %3, align 8
  %15 = icmp sgt i64 %13, %14
  br i1 %15, label %16, label %19

16:                                               ; preds = %0
  %17 = load i64, i64* %2, align 8
  %18 = sub nsw i64 %17, 1
  store i64 %18, i64* %4, align 8
  br label %21

19:                                               ; preds = %0
  %20 = load i64, i64* %2, align 8
  store i64 %20, i64* %4, align 8
  br label %21

21:                                               ; preds = %19, %16
  %22 = load i64, i64* %4, align 8
  %23 = load i64, i64* @RecentGlobalXmin, align 8
  %24 = call i32 @FullTransactionIdFromEpochAndXid(i64 %22, i64 %23)
  ret i32 %24
}

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @TransactionIdIsNormal(i64) #1

declare dso_local i32 @ReadNextFullTransactionId(...) #1

declare dso_local i64 @EpochFromFullTransactionId(i32) #1

declare dso_local i64 @XidFromFullTransactionId(i32) #1

declare dso_local i32 @FullTransactionIdFromEpochAndXid(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
